Fix jumping CEO pics

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -487,6 +487,7 @@ hr {
         transition: border-left-color 0.3s;
     }
     .ceo-name {
+      min-width: 108px;
       padding-left: 4px;
     }
     .key-item {
